--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@
 }
 
 body {
+  width: 90%;
+
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   background-image: url(jason-leung-nM2WEy42Npg-unsplash.jpg);
   background-size: cover;
